--- a/requirements.txt
+++ b/requirements.txt
@@ -1,93 +1,8 @@
-appnope==0.1.0
-appscript==1.0.1
-argon2-cffi==20.1.0
-arrow==0.15.8
-attrs==20.1.0
-backcall==0.2.0
-beautifulsoup4==4.9.1
-bibtexparser==1.2.0
-bleach==3.1.5
-boto==2.49.0
-certifi==2020.6.20
-cffi==1.14.2
-chardet==3.0.4
-cryptography==3.0
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
-entrypoints==0.3
-fake-useragent==0.1.11
-fire==0.3.1
-free-proxy==1.0.1
-future==0.18.2
-gmpy2==2.0.8
-idna==2.10
-importlib-metadata==1.7.0
-ipykernel==5.3.4
-ipython==7.17.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-jedi==0.17.2
-Jinja2==2.11.2
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.6
-jupyter-console==6.1.0
-jupyter-core==4.6.3
-kiwisolver==1.2.0
-llvmlite==0.29.0
-locket==0.2.0
-lxml==4.5.2
-MarkupSafe==1.1.1
-matplotlib==3.3.1
-mistune==0.8.4
-mpmath==1.1.0
-nbconvert==5.6.1
-nbformat==5.0.7
-notebook==6.1.3
-numpy==1.19.1
-packaging==20.4
-pandas==1.1.1
-pandocfilters==1.4.2
-parso==0.7.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==7.2.0
-prometheus-client==0.8.0
-prompt-toolkit==3.0.6
-ptyprocess==0.6.0
-pycosat==0.6.3
-pycparser==2.20
-pycrypto==2.6.1
-pycurl==7.43.0.3
-Pygments==2.6.1
-pyOpenSSL==19.1.0
-pyparsing==2.4.7
-pyrsistent==0.16.0
-PySocks==1.7.1
-python-dateutil==2.8.1
-python-dotenv==0.14.0
-pytz==2020.1
-PyYAML==5.1.2
-pyzmq==19.0.2
-qtconsole==4.7.6
-QtPy==1.9.0
-requests==2.24.0
-ruamel-yaml==0.15.46
-scholarly==0.4.1
-selenium==3.141.0
-Send2Trash==1.5.0
-simple-http-server==0.1.7
-six==1.15.0
-soupsieve==2.0.1
-stem==1.8.0
-termcolor==1.1.0
-terminado==0.8.3
-testpath==0.4.4
-tornado==6.0.4
-traitlets==4.3.3
-urllib3==1.25.10
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-zipp==3.1.0
+beautifulsoup4
+fire
+matplotlib
+ipython
+scholarly
+jupyter
+free-proxy
+webdriver-manager
